--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "CantinaPoker",
     "require": {
         "php": ">=5.5",
-        "symfony/console": "~2.5"
+        "symfony/console": "~2.5",
+        "pimple/pimple": "~3.0"
     },
     "autoload": {
         "psr-4": {
