--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "hinchk/CantinaPoker",
     "description": "CantinaPoker",
+    "license": "MIT",
     "require": {
         "php": ">=5.5",
         "symfony/console": "~2.5",
